<resources>
    <string name="company">VMP</string>
    <string name="founder">김경찬</string>
    <string name="business_number">246-86-01216</string>
    <string name="business_address">대구광역시 남구 봉덕로 135</string>
    <string name="business_kakao">VMP</string>
    <string name="app_name">V로드</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VEX MALL</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup_fragment2">SignupFragment2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_of_service1">방침 및 절차\n \n 1. 소개\n \n \n \n 1&#8211;1 VMP(Vendor Marketing Platform) VM 계약에 포함된 정책 및 보상플랜\n \n \n \n VMP (이하 회사로 지칭)의 고유 권한으로 개정하게 될 방침 및 절차의 일부는 사업파트너 (이하 VM으로 지칭) 가이드 자료에 반영되어 있으며 또한 그 계약서로서의 중요한 부분을 구성한다고 본다. 본 방침 및 절차, 그리고 회사의 보상플랜을 총괄적으로 지칭하는 것이다. 이러한 가이드들은 회사의 고유 권한으로 개정하게 될 현행 및 장래의 모든 형태에 참조 형식으로 반영될 것이다.\n \n \n \n 1&#8211;2 계약 내용의 변경\n \n \n \n 회사는 계약 내용과 가격, VMC, VMR, VMP를 전적인 고유 권한으로 개정할 권리를 가진다. 다만 대표사업자 이하 VMP회원들간의 충분한 논의를 통한 개정을 약속하는 바이며 지속적으로 올바른 방향을 위한 개정의 의견을 듣고 협력하기로 한다. VM 회원에 가입함으로써, 회사의 VM은 회사가 변경 또는 개정하는 모든 사항에 따를 것임을 동의한다. 개정에 대한 공고는 다음 방법 중 한 가지 또는 그 이상의 방법을 통해 고지된다.\n \n 1) 회사에서 제공된 사업자 웹사이트에 공지\n \n 2) 전자메일\n \n 3) 웹진 형태 등의 회사의 간행물\n \n 4) 별도의 우편물\n \n 5) 팩스 및 기타 방법\n \n \n \n 1&#8211;3 정책 및 조항의 분리\n \n \n \n 만일 현행 또는 개정된 내용의 어떤 조항이 여하의 이유로 효력이 없거나 또는 집행 할 수 없는 것으로 판명되면, 그 조항의 효력이 없는 해당 부분만 분리될 것이며 그 나머지 조건 및 조항은 전적으로 유효한 상태로 남는다.\n \n \n \n 1&#8211;4 가이드의 숙지 및 준수 의무\n \n \n \n 회사는 사업 행위를 관리하는 관련 법규 및 계약 내용에 대한 준수를 독려하는 데 있어 회사에 주어진 권리를 결코 포기하지 않는다. VM은 가이드에 근거한 권리나 권한의 행사 또는 사업행위와 관련된 민형사상의 모든 관계법령을 준수하여야 한다. 만일 개인이 이를 숙지하지 못해 일어난 일체의 사건에 대해 회사는 어떠한 책임이나 보상의 의무가 없다.\n \n \n \n 3 사업의 운영\n \n \n \n 3&#8211;1 회사의 보상플랜 준수\n \n \n \n VM은 회사의 공식 간행물에 제시된 회사의 보상플랜의 조건을 반드시 준수해야 하며 사업의 기회를 제공 할때, 회사의 공식 간행물에 구체적으로 제시된 것과 다른 마케팅 시스템, 프로그램 혹은 방법을 혼합하여 제시해서는 안 된다. VM은 회사의 VM이 되고자 하는 고객으로 하여금 회사의 공식적인 계약서 이외의 여하한 다른 동의 및 계약을 체결하도록 요구하거나 권고해서는 안된다. 또한 회사의 보상플랜에 참여하기 위하여 회사의 공식 간행물에서 권장 또는 요구된 구매 혹은 납부 이외 여타의 개인 혹은 단체로부터 구매하거나, 여타의 개인 혹은 단체에게 비용을 납부하도록 고객, 가망 고객에게 요구 또는 권고해서는 안 된다.\n \n \n \n 3&#8211;2 광고\n \n \n \n 3&#8211;2&#8211;1 일반 사항\n \n \n \n 모든 VM은 회사, 서비스 혹은 제품에 대한 좋은 평판을 보호하고 홍보해야 한다. 회사와 회사의 기회, 보상플랜 그리고 회사의 제품 혹은 서비스를 마케팅하고 홍보함에 있어 무례하고, 기만적이고, 오해의 소지가 있고, 비윤리적이고 혹은 비도덕적인 행동이나 관행을 해서는 안 된다.\n \n \n \n 회사가 제공하는 제품과 서비스, 그리고 사업기회를 홍보하기 위해 VM은 반드시 회사가 제작한 영업 관련 도구 및 지원 자료만을 사용하여야 한다. 회사는 서비스와 보상플랜 그리고 홍보자료 등을 신중하게 디자인하여 그 자료들이 사실성 있는 공정하고 진실된 방법으로 홍보되고 법적 요구 사항을 충족할 수있도록 만전을 기하고 있다. 따라서 VM은 개인적인 간행물, 광고, 영업 관련 도구, 홍보 자료, 혹은 인터넷 웹페이지를 제작해서는 안 된다. \n \n \n \n 3&#8211;2&#8211;2 VM 웹사이트\n \n \n \n 만일 VM이 제품과 사업기회를 광고 또는 공유하기 위하여 웹사이트를 제작하여 활용하고자 할 경우 이 웹사이트는 방침 및 절차의 13 인터넷 비지니스 규정에 따라 구축이 되어야 한다.\n \n \n \n 3&#8211;2&#8211;3 상표권 및 저작권\n \n \n \n VM을 포함하여 여하한 사람이라도, 회사의 사전 서면 승인 없이 회사의 상품명, 상표, 디자인 혹은 상징을 사용할 수 없다. 다만, 아래 예시와 같이 회사의 사업 파트너임을 명확하게 밝히는 경우에는 사용이 가능하다.\n \n \n \n 예시)\n \n 홍길동\n \n 010&#8211;0000&#8211;0000\n \n www.vmp.support (회사의 서포트 사이트 명시)\n \n \n \n VM은 회사의 서면 승인 없이 회사의 이벤트 및 연설에 대한 기록물을 판매 또는 배포의 목적으로 제작할 수 없으며, 회사가 제작한 오디오 또는 동영상 형태의 프레젠테이션 기록물을 판매 또는 VM 개인 사용의 용도로 복제해서도 안 된다. VM은 회사의 상품명, 상표, 서비스명, 서비스 마크, 제품명, 회사명 또는 파생어를 인터넷 도메인명, 사업자등록상의 회사명으로 사용하거나 등록할 수 없다.\n \n \n \n VM은 소비자 또는 제3자에게 구두 외의 문서 및 다른 수단으로 제품, 또는 제품의 제조사에 대한 어떠한 홍보 자료, 정보성 자료 또는 정보를 사용하기 전 회사의 서면 승인을 받아야 한다. 전술한 규정을 준수하지 않을 경우, VM이 자료 제작 규정을 위반한 것으로 간주되어 VM 계약 또는 관련 법률에 따라 회사가 갖는 권리는 손상되지 않고, 회사가 서면 통보로 해당 VM계약을 해지할 수 있다.\n \n \n \n 기타 관련 사항은 방침 및 절차의 14 지적 재산권 규정을 참조\n \n \n \n 3&#8211;2&#8211;4 대중매체를 통한 광고, 홍보 및 인터뷰\n \n \n \n VM은 회사의 제품 서비스, 혹은 자신의 독립적 사업과 관련하여 미디어의 문의가 있는경우 이에 응대하려 시도해서는 안 된다. 여하한 종류의 미디어 매체에서 발생하는 모든 문의 사항은 회사의 대외 언론/홍보/마케팅을 담당하는 부서로 즉각 전달되어야 한다. 회사의 사전 승인을 득하지 않은 대중매체를 이용한 광고나 특정 VM 또는 소속된 그룹을 홍보하는 행위는 일체 금지한다.\n \n \n \n 3&#8211;2&#8211;5 동의 없는 이메일 및 팩스\n \n \n \n VM은 자신의 사업을 홍보하는 수단으로 상대방의 동의 없이 불특정 다수에게 전화, 팩스, 이메일, 문자등을 이용하여 사업을 홍보할 수 없다.\n \n \n \n 3&#8211;2&#8211;6 인명, 상호 명칭\n \n \n \n VM은 명함, 전화번호부의 인명 혹은 상호 편에 자신의 이름과 함께 사업 파트너로서 아래의 예시와 같이 자신을 등재할 수 있다.\n \n \n \n 예시)\n \n 홍길동\n \n 010&#8211;0000&#8211;0000\n \n www.vmp.support (회사의 대표 도메인 명시)\n \n \n \n VM은 전화응대 시 \회사의 이름\등과 같이 통화의 상대방으로 하여금 자신이 회사 본사 사무실에 전화한 것으로 믿게끔 유도할 수 있는 그 외의 다른 방식으로 말해서는 안된다. VM은 인명, 상호 명칭이 VMP의 직원 또는 대리인임을 암시하여서는 안 되며, 회사와 독립적인 VM임을 나타내어야 한다.\n \n \n \n 3&#8211;2&#8211;7 VM 명함 사용에 관한 규정\n \n \n \n VM 명함에 관해서는 회사가 권고하는 인명, 상호명칭 안에서 제작 디자인해야 한다. 명함 디자인 샘플은 마이오피스의 자료실 참조 요망 (추후 변경시 공지하도록 한다.)\n \n \n \n 3&#8211;3 추천인 / 후원인 변경 및 재등록\n \n \n \n 3&#8211;3&#8211;1 추천인/후원인 변경\n \n \n \n * 모든 VM은 다른 사람을 추천/후원할 권리가 있다. 더불어 모든 사람은 자신의 추천/후원인을 선택할 궁극적인 권리가 있다.\n \n * 동일한 신규 VM에 대해 두 명의 VM이 서로 추천인/후원인이라고 주장할 때, 회사는 1차적으로 먼저 접수된 계정등록을 유효한 것으로 간주한다.\n \n * VM은 추천인/후원인 배치 지정 과정에서 실수가 발생한 경우 VM배치일을 포함하여 3영업일 이내에 그 사실을 회사에 알려야 한다. 배치일로부터 3영업일 이내에 이러한 알림이 없는 경우 회사는 추천인/후원인 배치 지정 과정에 문제가 없는 것으로 간주하며, VM은 이에 대해 어떠한 주장도 제기할 수 없다.\n \n * 회사는 등록 과정에서의 업무 실수, 상위 후원인의 탈퇴, 등의 사유로 조정이 불가피한 경우 회사 고유 권한으로 검토 후 변경할 수 있다.\n \n * 추천인/후원인 배치 변경은 회사의 전적인 고유권한으로, 결정된 변경사항과 관련하여 VM은 어떠한 주장도 제기할 수 없다.\n \n * 추천인/후원인 배치 변경은 등록일로부터 3영업일 이후에는 불가능하다.\n \n \n \n 3&#8211;3&#8211;2 재등록\n \n \n \n * VM은 자신의 회사 사업을 리뉴얼 기간내 리뉴얼 하지 아니하고 30일의 유예기간을 제공한 후 61일째 되는 해당일에 인액티브 상태로 변경되어 해당 추천인의 3팀 가장 하위에 배치된다.\n \n * 자발적 탈퇴는 즉시 탈퇴를 원칙으로 하며 계정 삭제를 지원하지만 일체의 반환은 하지 않는다.\n \n * 인액티브 회원의 VM 재등록은 해당 추천인의 1팀 또는 2팀의 가장 하위에 배치된다.\n \n * 자발적 탈퇴자의 재등록은 2주간의 유예기간을 갖는다.\n \n \n \n 다음과 같은 상세 규정을 가진다.\n \n 1) 회사의 징계 규정에 의해 징계가 취해진 자는 재등록이 거부될 수 있다.\n \n 2) 2주간의 유예기간을 갖고 재등록 하고자 할때는 신규 등록과 같은 절차로 신청하여야 하며 본인이 원하는 다른 추천인을 지정할 수 있다.\n \n 3) 회사는 신규 VM의 혀하한 신청 혹은 리뉴얼, 회복에 대해 거부할 수 있는 권리가 있으며, 거부시 이에 대해 설명할 이유는 없다.\n \n \n \n 3&#8211;4 소득에 대한 주장 (사행성 조장 금지)\n \n \n \n VM이 가망고객에게 회사의 기회 또는 보상플랜에 대해 제시 혹은 의논을 할 때 소득에 대한 예상이나 주장을 하면 안 되며 또한 회사의 사업과 관련된 자신의 소득에 대한 자료를 공개해서는 안 된다. (수당 명세, 은행잋 기록, 세무 기록을 보여주거나 복사해주는 경우를 포함) 이런 행위는 사행심을 조장하는 행위로 간주될 수 있다.\n \n \n \n 3&#8211;5 이해의 상충\n \n \n \n 3&#8211;5&#8211;1 유인행위 금지\n \n \n \n VM은 본 계약기간 중 회사의 다른 VM이나 VD, CU를 다른 회사 혹은 다른 사업기회를 권유할 수 없다. (타 사업으로의 유인행위라 함) 또한 회사의 VM, VD, CU에게 다른 배치 위치에서 계정활동(차명활동 포함) 등록을 권유할 수 없다. (타 라인으로의 유인행위라 함) 또한 이러한 유인행위로 의심받을 수 있는 모임과 교육으로의 초대를 할 수 없다. 이와 같이 유인행위를 금지하는 이유는 VMP 사업의 근간을 위협할 수 있는 중대한 영업방해 행위로 간주되기 때문이다.\n \n \n \n 3&#8211;5&#8211;2 경쟁사 혹은 타 서비스의 판매\n \n \n \n VM은 회사의 회원에게 제품 혹은 서비스 이외의 여하한 제품 혹은 서비스를 판매하거나 판매하려 시도해서는 안 된다.\n \n \n \n 3&#8211;6&#8211;3 경쟁사 혹은 타 서비스의 전시\n \n \n \n * 회사의 홍보자료, 영업자료, 제품 혹은 서비스를 여타의 타사 홍보자료, 영업자료, 제품 혹은 서비스와 함께 동일한 장소에 전시해서는 안 된다.\n \n * 회사의 기회 제품 혹은 서비스를 타사의 프로그램, 기회, 제품 혹은 서비스와 함께 기존고객 또는 가망고객에게 제공해서는 안 된다.\n \n \n \n </string>
</resources>